<resources>
    <string name="app_name">Camera</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="read_from_album">Read from album</string>
    <string name="image">Image</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="play_recording">Play recording</string>
    <string name="stop_playing">Stop playing</string>
</resources>